prod_snapshot_2015-09-24_1030/objects/KPIMetric__c.object
<CustomObject>
    <fields>
        <fullName>Deals_Closed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Deals Closed</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dials__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Dials</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KPI_Calender__c</fullName>
        <label>KPI Calender</label>
        <referenceTo>KPICalender__c</referenceTo>
        <relationshipLabel>KPI Metrics</relationshipLabel>
        <relationshipName>KPI_Metrics</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>KPI_Rep__c</fullName>
        <label>KPI Rep</label>
        <referenceTo>KPIRep__c</referenceTo>
        <relationshipLabel>KPI Metrics</relationshipLabel>
        <relationshipName>KPI_Metrics</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rev_Booked__c</fullName>
        <label>Rev Booked</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Run_Demos__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Run Demos</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Set_Demos__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Set Demos</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Talk_Time__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Talk Time</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>KPI Metric</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>KPI Metric</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KPI Metrics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>